# win32Clipboard

./: CHANGES  CMakeLists.txt  README.md  appveyor.yml
ci/appveyor/: build_library.bat  install_rapidassist.bat  test_script.bat
cmake/: win32clipboard-config-version.cmake.in  win32clipboard-config.cmake.in
include/win32clipboard/: win32clipboard.h
src/: CMakeLists.txt  config.h.in  version.h.in  win32clipboard.cpp
test/: CMakeLists.txt  TestEncodingConversion.cpp  TestEncodingConversion.h  TestWin32Clipboard.cpp  main.cpp
